--- a/Exercise_on_python.ipynb
+++ b/Exercise_on_python.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNVOoG8NTNcwae47BlRWqd0",
+      "authorship_tag": "ABX9TyOMpcEwgOHTdHRPiEb/GKmk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -277,10 +276,11 @@
         "  item=int(input(\"Enter the number: \"))\n",
         "  lists.append(item)\n",
         "\n",
-        "print(lists)\n",
+        "print(lists, end=\"\\n\")\n",
         "new_list_less_than_five=[]\n",
-        "for j in range(lists-1):\n",
-        "  if(lists[j]<5):\n",
+        "for j in range(len(lists)):\n",
+        "  #print(lists[j])\n",
+        "  if(lists[j]<10):\n",
         "    new_list_less_than_five.append(lists[j])\n",
         "\n",
         "print(new_list_less_than_five)\n"
@@ -288,10 +288,9 @@
       "metadata": {
         "id": "E7jDzX7-DtnQ",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 321
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7648009d-fb45-44ac-817b-06902a2c3100"
+        "outputId": "960c3f5b-384e-44c1-ddbc-f0e037bc5c37"
       },
       "execution_count": null,
       "outputs": [
@@ -299,22 +298,17 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter the number of items you need to add to check the how many numbers are below 5 : 3\n",
-            "Enter the number: 2\n",
-            "Enter the number: 7\n",
+            "Enter the number of items you need to add to check the how many numbers are below 5 : 4\n",
+            "Enter the number: 3\n",
+            "Enter the number: 9\n",
             "Enter the number: 8\n",
-            "[2, 7, 8]\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-49-242ec28cf8f6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlists\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mnew_list_less_than_five\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlists\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m   \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlists\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mnew_list_less_than_five\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlists\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'int'"
+            "Enter the number: 7\n",
+            "[3, 9, 8, 7]\n",
+            "3\n",
+            "9\n",
+            "8\n",
+            "7\n",
+            "[3]\n"
           ]
         }
       ]
@@ -322,27 +316,216 @@
     {
       "cell_type": "code",
       "source": [
-        "969\n",
-        "lists"
+        "#Question 8 \n",
+        "a = [1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89]\n",
+        "b = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]\n",
+        "result=[]\n",
+        "if max(len(a),len(b))==len(a):\n",
+        "  lenght=len(a)\n",
+        "  for i in range(len(b)):\n",
+        "    if b[i] in a:\n",
+        "      print(b[i])\n",
+        "      result.append(b[i])\n",
+        "else:\n",
+        "   for j in range(len(a)):\n",
+        "    if a[j] in b:\n",
+        "      print(a[j])\n",
+        "      result.append(a[j])\n",
+        "\n",
+        "result=[*set(result)]# is used as simple method to remove the duplicates\n",
+        "result.sort()\n",
+        "print(result)\n",
+        "\n",
+        "\n",
+        "#method 2  \n",
+        "#a = [1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89]\n",
+        "#b = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]\n",
+        "#print(set(a[x] for x in range(len(a))if a[x] in b))\n",
+        " "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        },
+        "id": "_Ke6e71DOIEM",
+        "outputId": "d17d9455-be3a-4fbc-d947-c94939e7a878"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n",
+            "[1, 2, 3, 5, 8, 13]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'a = [1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89]\\nb = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]\\nprint(set(a[x] for x in range(len(a))if a[x] in b))'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Question 9 to check the given sequence is a palendrome or not\n",
+        "sequence=input(\"Enter the sequence to check its a palendrome or not: \")\n",
+        "sequence_list=list(sequence)\n",
+        "original_list=sequence_list.copy()\n",
+        "sequence_list.reverse()\n",
+        "if original_list==sequence_list:\n",
+        "  print(\"The sequence \"+sequence+\" is a palendrome\")\n",
+        "else:\n",
+        "  print(\"The sequence \"+sequence+\" is not a palendrome\")"
+      ],
+      "metadata": {
+        "id": "V0P8z88AOW-c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "549a0876-7fab-4bb5-e7ba-a7350bf9b18d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the sequence to check its a palendrome or not: hello\n",
+            "The sequence hello is not a palendrome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Question 10 create a list which has only even numbers in it\n",
+        "def to_check_even(num):\n",
+        "  print([numbers[i] for i in range(len(numbers)) if (int(numbers[i])%2==0)])\n",
+        "\n",
+        "a=int(input(\"Enter the number of numbers you need to enter to check which are even numbers among them : \"))\n",
+        "numbers=[input(\"Enter the numbers : \") for i in range(a) ]\n",
+        "to_check_even(numbers)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "_Ke6e71DOIEM",
-        "outputId": "7844b4cd-3cab-47c0-9faf-33605eafe8e0"
+        "id": "ogt9p-GwHa1Y",
+        "outputId": "be0ed9bf-7416-4a23-8da4-40de85a2545c"
       },
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[5, 5, 5, 5, 5]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 43
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number of numbers you need to enter to check which are even numbers among them : 3\n",
+            "Enter the numbers : 6\n",
+            "Enter the numbers : 2\n",
+            "Enter the numbers : 3\n",
+            "['6', '2']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n"
+      ],
+      "metadata": {
+        "id": "TXvCrdb4MxhX"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Question 11: Creating rock, paper, scissor.\n",
+        "import random\n",
+        "\n",
+        "def to_check_the_first_player(player1,player2):\n",
+        "  turn=random.randint(1,2)\n",
+        "  if turn==1:\n",
+        "    name_of_the_turn=player1\n",
+        "    return(name_of_the_turn)\n",
+        "    print(\"First turn is of player : \"+str(turn)+\" i.e \"+name_of_the_turn)\n",
+        "  else:\n",
+        "    name_of_the_turn=player2\n",
+        "    return(name_of_the_turn)\n",
+        "    print(\"First turn is of player : \"+str(turn)+\" i.e \"+name_of_the_turn)\n",
+        "\n",
+        "\n",
+        "player1=input(\"Enter the 1st player name : \")\n",
+        "player2=input(\"Enter the 2nd player name : \")\n",
+        "\n",
+        "name_of_the_turn=to_check_the_first_player(player1,player2)\n",
+        "print(\"Let the player \"+name_of_the_turn +\" choose rock or paper or scissor :\", end=\"\\n\")\n",
+        "player_1_choice=input()\n",
+        "print(\"Let the second player choose rock or paper or scissor :\", end=\"\\n\")\n",
+        "player_2_choice=input()\n",
+        "\n",
+        "def checking_for_winner(player_1_choice,player_2_choice):\n",
+        "  if (player_1_choice==player_2_choice):\n",
+        "    print(\"Both are tie\")\n",
+        "  elif((player_1_choice==\"scissor\") and (player_2_choice==\"paper\")):\n",
+        "    print(\"Player 1 i.e \"+player1+\" won the game\")\n",
+        "  elif((player_1_choice==\"scissor\") and (player_2_choice==\"rock\")):\n",
+        "    print(\"Player 2 i.e \"+player2+\" won the game\")\n",
+        "  elif((player_1_choice==\"rock\") and (player_2_choice==\"paper\")):\n",
+        "    print(\"Player 2 i.e \"+player2+\" won the game\")\n",
+        "  elif((player_1_choice==\"rock\") and (player_2_choice==\"scissor\")):\n",
+        "    print(\"Player 1 i.e \"+player1+\" won the game\")\n",
+        "  elif((player_1_choice==\"paper\") and (player_2_choice==\"rock\")):\n",
+        "    print(\"Player 1 i.e \"+player1+\" won the game\")\n",
+        "  elif((player_1_choice==\"paper\") and (player_2_choice==\"scissor\")):\n",
+        "    print(\"Player 2 i.e \"+player2+\" won the game\")\n",
+        "print(player_1_choice, player_2_choice)\n",
+        "\n",
+        "checking_for_winner(player_1_choice,player_2_choice)"
+      ],
+      "metadata": {
+        "id": "cX9p1Arx2sdo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c39b188e-6c44-4dd9-da5e-37725952d9a1"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the 1st player name : ashu\n",
+            "Enter the 2nd player name : ash\n",
+            "Let the player ash choose rock or paper or scissor :\n",
+            "rock\n",
+            "Let the second player choose rock or paper or scissor :\n",
+            "scissor\n",
+            "rock scissor\n",
+            "Player 1 i.e ashu won the game\n"
+          ]
         }
       ]
     },
@@ -350,7 +533,55 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "V0P8z88AOW-c"
+        "id": "6eMhHzCT_YjZ"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KzQQlQPvAeuC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yy9zTV8jQWdZ",
+        "outputId": "0122b14d-0046-4a56-ad7f-d4afee9ed825"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Aradhya', 'Ashwini']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Obm_6RbYQdAU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "4JZEMZazRCAC"
       },
       "execution_count": null,
       "outputs": []
